--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    background: ghostwhite;
-    color: dimgray;
+    background: rgb(122, 122, 210);
+    color: rgb(150, 101, 101);
     font-family: serif;
     text-align: center;
 }
@@ -17,7 +17,7 @@ h1{
 
 .box{
     display: inline-block;
-    border: 1px solid gray;
+    border: 1px solid rgb(148, 92, 92);
     width: 100px;
     height: 100px;
     text-align: center;
